@@ -54,10 +54,15 @@
 
 <from dir="/usr/LIB/xorg/modules">
   drivers/fbdev_drv.so
+  drivers/modesetting_drv.so
+  drivers/vboxvideo_drv.so
   drivers/vesa_drv.so
+  drivers/vmware_drv.so
   input/evdev_drv.so
-  input/vmmouse_drv.so
+  input/mouse_drv.so
+  input/kbd_drv.so
   input/synaptics_drv.so
+  input/vmmouse_drv.so
   input/wacom_drv.so
   libfbdevhw.so
   libfb.so
